--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,8 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add Formula/daily-scripts.rb
           git commit -m "Update formula sha256 to $sha256_value"
+          git status
+          set -x
           git push origin main
 
       - name: Create GitHub Release
